--- a/index.html
+++ b/index.html
@@ -127,3 +127,7 @@
   </script>
 </body>
 </html>
+
+<a href="https://wa.me/96477214324125" target="_blank" style="background-color:#25D366; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; display:inline-block; font-family:sans-serif;">
+  📞 تواصل على واتساب
+</a>
